[gd_scene load_steps=10 format=3 uid="uid://d2lnrkb8w4j16"]

[ext_resource type="Script" path="res://Scenes/test_level.gd" id="1_0hs32"]
[ext_resource type="PackedScene" uid="uid://u8fiysfj1plv" path="res://Scenes/black_door.tscn" id="2_lnotc"]
[ext_resource type="PackedScene" uid="uid://c00jo8qmg4n57" path="res://Scenes/white_door.tscn" id="3_6qtgo"]
[ext_resource type="PackedScene" uid="uid://bwpuy0ynb7hrt" path="res://Scenes/shadow.tscn" id="4_wwgo1"]
[ext_resource type="PackedScene" uid="uid://blhemidxahef0" path="res://Scenes/player.tscn" id="5_f1ex4"]
[ext_resource type="PackedScene" uid="uid://c5vs0rnqra8n2" path="res://Scenes/white_key.tscn" id="6_05fvs"]
[ext_resource type="PackedScene" uid="uid://biqrfuoenibp4" path="res://Scenes/black_key.tscn" id="7_va6fc"]
[ext_resource type="Theme" uid="uid://d334f2xsycvqg" path="res://Resources/basic_theme.tres" id="8_qdi7l"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tlkgg"]
bg_color = Color(0.103744, 0.103744, 0.103743, 1)

[node name="level_0" type="Node2D"]
script = ExtResource("1_0hs32")

[node name="bottom_background" type="ColorRect" parent="."]
offset_top = 160.0
offset_right = 320.0
offset_bottom = 320.0

[node name="top_background" type="ColorRect" parent="."]
offset_right = 320.0
offset_bottom = 160.0
color = Color(0, 0, 0, 1)

[node name="black_door" parent="." instance=ExtResource("2_lnotc")]
position = Vector2(224, 184)

[node name="white_door" parent="." instance=ExtResource("3_6qtgo")]
position = Vector2(224, 136)

[node name="floor_white" type="StaticBody2D" parent="."]

[node name="collision_white" type="CollisionPolygon2D" parent="floor_white"]
position = Vector2(0, 64)
polygon = PackedVector2Array(0, 96, 0, -64, 64, -64, 64, 80, 256, 80, 256, -64, 320, -64, 320, 96)

[node name="shape_white" type="Polygon2D" parent="floor_white/collision_white"]

[node name="floor_black" type="StaticBody2D" parent="."]

[node name="collision_black" type="CollisionPolygon2D" parent="floor_black"]
position = Vector2(0, 80)
polygon = PackedVector2Array(0, 80, 0, 240, 64, 240, 64, 96, 256, 96, 256, 240, 320, 240, 320, 240, 320, 80)

[node name="shape_black" type="Polygon2D" parent="floor_black/collision_black"]
color = Color(0, 0, 0, 1)

[node name="shadow" parent="." instance=ExtResource("4_wwgo1")]
position = Vector2(80, 184)

[node name="player" parent="." instance=ExtResource("5_f1ex4")]
position = Vector2(80, 136)

[node name="white_key" parent="." instance=ExtResource("6_05fvs")]
position = Vector2(248, 136)

[node name="black_key" parent="." instance=ExtResource("7_va6fc")]
position = Vector2(136, 184)

[node name="pause_menu" type="PanelContainer" parent="."]
process_mode = 3
visible = false
offset_right = 320.0
offset_bottom = 328.0
theme = ExtResource("8_qdi7l")
theme_override_styles/panel = SubResource("StyleBoxFlat_tlkgg")

[node name="VBoxContainer" type="VBoxContainer" parent="pause_menu"]
layout_mode = 2

[node name="Control3" type="Control" parent="pause_menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.75

[node name="Label" type="Label" parent="pause_menu/VBoxContainer"]
layout_mode = 2
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="pause_menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="VBoxContainer" type="VBoxContainer" parent="pause_menu/VBoxContainer"]
layout_mode = 2

[node name="continue" type="Button" parent="pause_menu/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
text = "Back to Game"

[node name="quit_to_main" type="Button" parent="pause_menu/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
text = "Back to Level Selection"

[node name="Control2" type="Control" parent="pause_menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[connection signal="button_up" from="pause_menu/VBoxContainer/VBoxContainer/continue" to="." method="close_pause"]
[connection signal="button_up" from="pause_menu/VBoxContainer/VBoxContainer/quit_to_main" to="." method="_on_quit_to_main_button_up"]
